--- a/src/amina.html
+++ b/src/amina.html
@@ -3,7 +3,7 @@
 
 <body>
 
-	<div class="page main">
+	<div class="page main form_woman">
 			@@include('tpl/partials/header_m.html'})
 
 			@@include('tpl/partials/about.html'})
