--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,23 @@
 
 		@@include('tpl/partials/modals.html'})
 
-		@@include('tpl/partials/gallery.html'})
-
-		@@include('tpl/partials/option.html'})
-
 		@@include('tpl/partials/etap.html'})
-
-		@@include('tpl/partials/form.html'})
 
 		@@include('tpl/partials/benef.html'})
 
+		@@include('tpl/partials/gallery.html'})
+
+		@@include('tpl/partials/parad.html'})
+
 		@@include('tpl/partials/plan.html'})
+
+		@@include('tpl/partials/option.html'})
+
+		@@include('tpl/partials/form.html'})
+
+		@@include('tpl/partials/geo.html'})
+
+		@@include('tpl/partials/etap.html'})
 
 		@@include('tpl/partials/footer.html')
 	</div>
